add aboutme and education

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,40 +1,157 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
 body {
-  /* padding: 50px; */
-  /* font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; */
-  background-image: url('/images/dark-nature.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: cover;
-  /* background-size: 100% 100%; */
+    /* padding: 50px; */
+    /* font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; */
+    /* background-image: url('/images/dark-nature.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover; */
+    /* position: relative; */
+    /* width: 100%;
+  height: 100%; */
+    /* background-size: 100% 100%; */
+}
+
+.index {
+    width: 100%;
+    height: 100vh;
+    background: url('/images/dark-nature.jpg') no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.aboutme {
+    width: 100%;
+    height: 100vh;
+    background: url('/images/river.jpg') no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.education {
+    width: 100%;
+    height: auto;
+    /* background: url('/images/river.jpg') no-repeat 50% 50%; */
+    background-size: cover;
+    background-color: #111;
 }
 
 @font-face {
-  font-family: 'rsuregular';
-  src: url('fonts/rsu_regular-webfont.eot');
-  src: url('fonts/rsu_regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('fonts/rsu_regular-webfont.woff2') format('woff2'),
-       url('fonts/rsu_regular-webfont.woff') format('woff'),
-       url('fonts/rsu_regular-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'rsuregular';
+    src: url('fonts/rsu_regular-webfont.eot');
+    src: url('fonts/rsu_regular-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/rsu_regular-webfont.woff2') format('woff2'), url('fonts/rsu_regular-webfont.woff') format('woff'), url('fonts/rsu_regular-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-  font-family: 'rsubold';
-  src: url('fonts/rsu_bold-webfont.eot');
-  src: url('fonts/rsu_bold-webfont.eot?#iefix') format('embedded-opentype'),
-       url('fonts/rsu_bold-webfont.woff2') format('woff2'),
-       url('fonts/rsu_bold-webfont.woff') format('woff'),
-       url('fonts/rsu_bold-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'rsubold';
+    src: url('fonts/rsu_bold-webfont.eot');
+    src: url('fonts/rsu_bold-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/rsu_bold-webfont.woff2') format('woff2'), url('fonts/rsu_bold-webfont.woff') format('woff'), url('fonts/rsu_bold-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.white_text{
-  color:white;
-  font-family: 'rsubold', sans-serif;
+.wordmain {
+    color: white;
+    /* font-family: 'rsubold', sans-serif; */
+    font-family: 'Fira Mono', monospace;
+    font-size: 80px;
+    /* -webkit-text-stroke: 2px black; */
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    margin: 0;
+    letter-spacing: -7px;
 }
 
-/* a {
-  color: #00B7FF;
-} */
+.content {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    /* border: 5px solid #FFFF00; */
+    /* padding: 10px; */
+}
+
+.mycard {
+    background-color: whitesmoke;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 28px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-weight: 100px;
+    opacity: 0.9;
+    height: 100%;
+}
+
+/* font Glitch */
+
+.textG {
+    animation: glitch 1s linear infinite;
+}
+
+@keyframes glitch {
+    2%, 64% {
+        transform: translate(2px, 0) skew(0deg);
+    }
+    4%, 60% {
+        transform: translate(-2px, 0) skew(0deg);
+    }
+    62% {
+        transform: translate(0, 0) skew(5deg);
+    }
+}
+
+.textG:before, .textG:after {
+    content: attr(title);
+    position: absolute;
+    left: 0;
+}
+
+.textG:before {
+    animation: glitchTop 1s linear infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop {
+    2%, 64% {
+        transform: translate(2px, -2px);
+    }
+    4%, 60% {
+        transform: translate(-2px, 2px);
+    }
+    62% {
+        transform: translate(13px, -1px) skew(-13deg);
+    }
+}
+
+.textG:after {
+    animation: glitchBotom 1.5s linear infinite;
+    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBotom {
+    2%, 64% {
+        transform: translate(-2px, 0);
+    }
+    4%, 60% {
+        transform: translate(-2px, 0);
+    }
+    62% {
+        transform: translate(-22px, 5px) skew(21deg);
+    }
+}
+
+.imgEducation {
+    /* width: 230px;
+    height: 230px; */
+    /* border: 2px solid #fff; */
+    /* -moz-box-shadow: 0px 6px 5px #ccc;
+    -webkit-box-shadow: 0px 6px 5px #ccc;
+    box-shadow: 0px 6px 5px #ccc;
+    -moz-border-radius: 230px;
+    -webkit-border-radius: 230px;
+    border-radius: 230px; */
+}
