--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
+
+<head>
+    <title>
+        <%= title %>
+    </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+    
+</head>
+
+<body>
     <%- include navbar %>
-    <div>
-      <h1 class="white_text">Welcome to Portfolio</h1>
-    </div>
-  </body>
+    <div class="index"></div>
+    <div class="content">
+        <h1 class="wordmain textG" title="Welcome to Portfolio Pakasit Ketudom">Welcome to Portfolio<br/>Pakasit Ketudom</h1>
+        <!-- <h1 class="wordmain textG" title="Pakasit Ketudom">Pakasit Ketudom</h1> -->
+    </div>    
+</body>
+
 </html>
