--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,6 +71,7 @@ body {
     text-align: center;
     /* border: 5px solid #FFFF00; */
     /* padding: 10px; */
+    /* z-index: 0; */
 }
 
 .mycard {
@@ -80,7 +81,7 @@ body {
     font-size: 28px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-weight: 100px;
-    opacity: 0.9;
+    /* opacity: 0.9; */
     height: 100%;
 }
 
