--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,129 +1,364 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 <style>
-    .logo {
-        line-height: 60px;
-        position: fixed;
-        float: left;
-        margin: 16px 46px;
+    /*
+*
+* ==========================================
+* CUSTOM UTIL CLASSES
+* ==========================================
+*
+*/
+    .navbar {
+        transition: all 0.4s;
+    }
+
+    .navbar .nav-link {
         color: #fff;
-        font-weight: bold;
-        font-size: 20px;
-        letter-spacing: 2px;
     }
-    
-    nav {
-        position: fixed;
-        width: 100%;
-        line-height: 60px;
-        z-index: 9999 !important;
-    }
-    
-    nav ul {
-        line-height: 60px;
-        list-style: none;
-        background: rgba(0, 0, 0, 0);
-        overflow: hidden;
+
+    .navbar .nav-link:hover,
+    .navbar .nav-link:focus {
         color: #fff;
-        padding: 0;
-        text-align: right;
-        margin: 0;
-        padding-right: 40px;
-        transition: 1s;
-    }
-    
-    nav.black ul {
-        background: #000;
-    }
-    
-    nav ul li {
-        display: inline-block;
-        padding: 16px 40px;
-        ;
-    }
-    
-    nav ul li a {
         text-decoration: none;
-        color: #fff;
-        font-size: 16px;
     }
-    
-    .menu-icon {
-        line-height: 60px;
-        width: 100%;
-        background: #000;
-        text-align: right;
-        box-sizing: border-box;
-        padding: 15px 24px;
-        cursor: pointer;
+
+    .navbar .navbar-brand {
         color: #fff;
-        display: none;
     }
-    
-    /* @media(max-width: 786px) {
-        .logo {
-            position: fixed;
-            top: 0;
-            margin-top: 16px;
+
+
+    /* Change navbar styling on scroll */
+    .navbar.active {
+        background: #111010;
+        box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .navbar.active .nav-link {
+        color: #fff;
+    }
+
+    .navbar.active .nav-link:hover,
+    .navbar.active .nav-link:focus {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .navbar.active .navbar-brand {
+        color: #fff;
+    }
+
+
+    /* Change navbar styling on small viewports */
+    @media (max-width:992px) {
+        .navbar {
+            background: #111010;
         }
-        nav ul {
-            max-height: 0px;
-            background: #000;
+
+        .navbar .navbar-brand,
+        .navbar .nav-link {
+            color: #fff;
         }
-        nav.black ul {
-            background: #000;
-        }
-        .showing {
-            max-height: 34em;
-        }
-        nav ul li {
-            box-sizing: border-box;
-            width: 100%;
-            padding: 24px;
-            text-align: center;
-        }
-        .menu-icon {
-            display: block;
-        }
-    } */
+    }
 </style>
 
+<!-- hamburger bar -->
+<style>
+    .navTrigger {
+        display: none;
+    }
+
+    .nav {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+    }
+
+
+    /* Media qurey section */
+
+    @media screen and (min-width: 768px) and (max-width: 1024px) {
+        .container {
+            margin: 0;
+        }
+    }
+
+    @media screen and (max-width:992px) {
+        .navTrigger {
+            display: block;
+        }
+    }
+
+
+    /* Animation */
+
+    .navTrigger {
+        cursor: pointer;
+        width: 30px;
+        height: 25px;
+        /* margin: auto; */
+        position: absolute;
+        right: 30px;
+        top: 30px;
+        bottom: 0;
+    }
+
+    .navTrigger i {
+        background-color: #fff;
+        border-radius: 2px;
+        content: '';
+        display: block;
+        width: 100%;
+        height: 4px;
+    }
+
+    .navTrigger i:nth-child(1) {
+        -webkit-animation: outT 0.8s backwards;
+        animation: outT 0.8s backwards;
+        -webkit-animation-direction: reverse;
+        animation-direction: reverse;
+    }
+
+    .navTrigger i:nth-child(2) {
+        margin: 5px 0;
+        -webkit-animation: outM 0.8s backwards;
+        animation: outM 0.8s backwards;
+        -webkit-animation-direction: reverse;
+        animation-direction: reverse;
+    }
+
+    .navTrigger i:nth-child(3) {
+        -webkit-animation: outBtm 0.8s backwards;
+        animation: outBtm 0.8s backwards;
+        -webkit-animation-direction: reverse;
+        animation-direction: reverse;
+    }
+
+    .navTrigger.active i:nth-child(1) {
+        -webkit-animation: inT 0.8s forwards;
+        animation: inT 0.8s forwards;
+    }
+
+    .navTrigger.active i:nth-child(2) {
+        -webkit-animation: inM 0.8s forwards;
+        animation: inM 0.8s forwards;
+    }
+
+    .navTrigger.active i:nth-child(3) {
+        -webkit-animation: inBtm 0.8s forwards;
+        animation: inBtm 0.8s forwards;
+    }
+
+    @-webkit-keyframes inM {
+        50% {
+            -webkit-transform: rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: rotate(45deg);
+        }
+    }
+
+    @keyframes inM {
+        50% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(45deg);
+        }
+    }
+
+    @-webkit-keyframes outM {
+        50% {
+            -webkit-transform: rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: rotate(45deg);
+        }
+    }
+
+    @keyframes outM {
+        50% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(45deg);
+        }
+    }
+
+    @-webkit-keyframes inT {
+        0% {
+            -webkit-transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            -webkit-transform: translateY(9px) rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: translateY(9px) rotate(135deg);
+        }
+    }
+
+    @keyframes inT {
+        0% {
+            transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            transform: translateY(9px) rotate(0deg);
+        }
+
+        100% {
+            transform: translateY(9px) rotate(135deg);
+        }
+    }
+
+    @-webkit-keyframes outT {
+        0% {
+            -webkit-transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            -webkit-transform: translateY(9px) rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: translateY(9px) rotate(135deg);
+        }
+    }
+
+    @keyframes outT {
+        0% {
+            transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            transform: translateY(9px) rotate(0deg);
+        }
+
+        100% {
+            transform: translateY(9px) rotate(135deg);
+        }
+    }
+
+    @-webkit-keyframes inBtm {
+        0% {
+            -webkit-transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            -webkit-transform: translateY(-9px) rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: translateY(-9px) rotate(135deg);
+        }
+    }
+
+    @keyframes inBtm {
+        0% {
+            transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            transform: translateY(-9px) rotate(0deg);
+        }
+
+        100% {
+            transform: translateY(-9px) rotate(135deg);
+        }
+    }
+
+    @-webkit-keyframes outBtm {
+        0% {
+            -webkit-transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            -webkit-transform: translateY(-9px) rotate(0deg);
+        }
+
+        100% {
+            -webkit-transform: translateY(-9px) rotate(135deg);
+        }
+    }
+
+    @keyframes outBtm {
+        0% {
+            transform: translateY(0px) rotate(0deg);
+        }
+
+        50% {
+            transform: translateY(-9px) rotate(0deg);
+        }
+
+        100% {
+            transform: translateY(-9px) rotate(135deg);
+        }
+    }
+
+    .affix {
+        padding: 0;
+        background-color: #111;
+    }
+</style>
+
+
 <script>
-    $(document).ready(function() {
-        $(".menu-icon").on("click", function() {
-            $("nav ul").toggleClass("showing");
+    $(document).ready(function () {
+        $('.navTrigger').click(function () {
+            $(this).toggleClass('active');
+            console.log("Clicked menu");
+        });
+
+        $(function () {
+            $(window).on('scroll', function () {
+                if ($(window).scrollTop() > 10) {
+                    $('.navbar').addClass('active');
+                } else {
+                    $('.navbar').removeClass('active');
+                }
+            });
         });
     });
-
-    // Scrolling Effect
-
-    $(window).on("scroll", function() {
-        if ($(window).scrollTop()) {
-            $('nav').addClass('black');
-        } else {
-            $('nav').removeClass('black');
-        }
-    })
 </script>
 
-<nav>
-    <div class="menu-icon">
-        <i class="fa fa-bars fa-2x"></i>
-    </div>
-    <div class="logo">
-        LOGO
-    </div>
-    <div class="menu">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/aboutme">About me</a></li>
-            <li><a href="/education">Education</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+<nav class="navbar navbar-expand-lg fixed-top py-3">
+    <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Pakasit Ketudom</a>
+        <!-- <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button> -->
+        <div class="navTrigger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+        class="navbar-toggler navbar-toggler-right">
+            <i></i><i></i><i></i>
+        </div>
+
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active"><a href="/" class="nav-link text-uppercase font-weight-bold">Home <span
+                            class="sr-only">(current)</span></a></li>
+                <li class="nav-item"><a href="/aboutme" class="nav-link text-uppercase font-weight-bold">About me</a></li>
+                <li class="nav-item"><a href="/education" class="nav-link text-uppercase font-weight-bold">Education</a></li>
+                <li class="nav-item"><a href="/portfolio" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+                <!-- <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Portfolio</a></li>
+                <li class="nav-item"><a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a></li> -->
+            </ul>
+        </div>
     </div>
 </nav>
