--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -14,8 +14,15 @@
     <div class="aboutme">
         <div class="col-md-12" style="padding-top:90px;">
             <div class="row no-gutters">
-                <div class="col-md-6">
-                    <div class="mr-1 mycard">
+                <div class="col-md-6 col-sm-12 mb-1">
+                    <div class="mycard m-1">
+                        <div >
+                            <img src="/images/flower.jpg" class="d-block" style="height: 200px; width: 200px; margin: auto;">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 mb-1">
+                    <div class="mycard m-1">
                         <div class="col-md-12">
                             Name : Pakasit Ketudom
                         </div>
@@ -37,11 +44,6 @@
                         <div class="col-md-12">
                             Weakness : Overthink, Slow decision
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="ml-1 mycard">
-                        <img src="/images/flower.jpg" class="mx-auto d-block">
                     </div>
                 </div>
             </div>
