--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -9,9 +9,262 @@
 
 </head>
 
+<style>
+    .img_height{
+        height:100%;
+        margin: auto;
+    }
+</style>
+
 <body>
     <%- include navbar %>
     <div class="portfolio">
+        <div class="col-md-12" style="padding-top:90px;">
+            <div class="col-sm-12 row row-no-gutters mx-1">
+                <div class="col-xl-3 col-sm-6">
+                    <div class="card mx-1 mb-2">
+                        <div class="card-header">
+                            <h5>Python : Movies</h5>
+                        </div>
+                        <!-- <img src="../images/python1.png" class="card-img-top px-4 pt-4 img_height"> -->
+                        <div class="img_height">
+                            <img src="../images/python1.png" class="card-img-top px-4 pt-4" style="height:300px;">
+                        </div>
+                        <div class="card-body">
+                            <button type="button" class="btn btn-secondary col-12" data-toggle="modal"
+                                data-target="#modal_movie">
+                                Details
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal_movie" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Python : Movies</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body text-center">
+                                            <div class="py-3 text-left">
+                                                This system created by python. It can search detail of movies and rate,
+                                                review movies 
+                                                <a href="https://youtu.be/L4g04lh5fag" target="_blank">Youtube</a>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python1.png" class="col-9">
+                                                <p>Menu Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python2.png" class="col-9">
+                                                <p>Search Movie Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python3.png" class="col-9">
+                                                <p>Movies data Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python4.png" class="col-9">
+                                                <p>Add Review Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python5.png" class="col-9">
+                                                <p>Register Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python6.png" class="col-9">
+                                                <p>Movies data with review Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/python7.png" class="col-9">
+                                                <p>Random Movies Screen</p>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6">
+                    <div class="card mx-1 mb-2">
+                        <div class="card-header">
+                            <h5>Android : FindmylostTNI</h5>
+                        </div>
+                        <img src="../images/findmylost1.png" class="card-img-top px-4 pt-4 img_height" style="height:300px; width: 200px !important;">
+                        <div class="card-body">
+                            <button type="button" class="btn btn-secondary col-12" data-toggle="modal"
+                                data-target="#modal_findmylost">
+                                Details
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal_findmylost" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Android : FindmylostTNI</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body text-center">
+                                            <div class="py-3 text-left">
+                                                This application for who lost something in Thai-Nichi Institute of Technology can post announcements to find lost items
+                                                <a href="https://www.youtube.com/watch?v=Bu-Ed6x6rKY" target="_blank">Youtube</a>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/findmylost1.png" class="col-9 img_height" style="width: 300px !important;">
+                                                <p>First Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/findmylost2.png" class="col-9 img_height" style="width: 300px !important;">
+                                                <p>Sidebar Menu</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/findmylost3.png" class="col-9 img_height" style="width: 300px !important;">
+                                                <p>Select Broad Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/findmylost4.png" class="col-9 img_height" style="width: 300px !important;">
+                                                <p>Report Lost Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/findmylost5.png" class="col-9 img_height" style="width: 300px !important;">
+                                                <p>Broad Lost Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/findmylost6.png" class="col-9 img_height" style="width: 300px !important;">
+                                                <p>Contact Screen</p>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6">
+                    <div class="card mx-1 mb-2">
+                        <div class="card-header">
+                            <h5>PHP : Sosecure Threats Feed</h5>
+                        </div>
+                        <div class="img_height">
+                            <img src="../images/sosecure1.png" class="card-img-top px-4 pt-4" style="height:300px;">
+                        </div>
+                        <div class="card-body">
+                            <button type="button" class="btn btn-secondary col-12" data-toggle="modal"
+                                data-target="#modal_threatfeed">
+                                Details
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal_threatfeed" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">PHP : Sosecure Threats Feed</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body text-center">
+                                            <div class="py-3 text-left">
+                                                This system created by PHP, Html, Css, Javascript, Jquery, Mysql. It can show threatsfeed by search and can search cve number for show detail of cve
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/sosecure1.png" class="col-9 img_height">
+                                                <p>Search Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/sosecure2.png" class="col-9 img_height">
+                                                <p>Search Cve By Number Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/sosecure3.png" class="col-9 img_height">
+                                                <p>Search Cve By Number Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/sosecure4.png" class="col-9 img_height">
+                                                <p>Ip Blocklist Screen</p>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-sm-6">
+                    <div class="card mx-1 mb-2">
+                        <div class="card-header">
+                            <h5>Wordpress : Epic7</h5>
+                        </div>
+                        <div class="img_height">
+                            <img src="../images/epicseven1.png" class="card-img-top px-4 pt-4" style="height:300px;">
+                        </div>
+                        <div class="card-body">
+                            <button type="button" class="btn btn-secondary col-12" data-toggle="modal"
+                                data-target="#modal_epicseven">
+                                Details
+                            </button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="modal_epicseven" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Wordpress : Epic7</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body text-center">
+                                            <div class="py-3 text-left">
+                                                This system created by Wordprss, Html, Javascript, Css this website translate from Epic Seven game for Thailand player.
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/epicseven1.png" class="col-9">
+                                                <p>Home Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/epicseven2.png" class="col-9">
+                                                <p>Character Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/epicseven3.png" class="col-9">
+                                                <p>Translate Skill Screen</p>
+                                            </div>
+                                            <div class="pb-3">
+                                                <img src="../images/epicseven4.png" class="col-9">
+                                                <p>Another Screen</p>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
