--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@ body {
     /* background-size: 100% 100%; */
 }
 
+body,html{
+    height: 100%;
+    margin: 0;
+}
+
 .index {
     width: 100%;
     height: 100vh;
@@ -27,11 +32,22 @@ body {
 }
 
 .education {
-    width: 100%;
-    height: auto;
-    /* background: url('/images/river.jpg') no-repeat 50% 50%; */
+    /* width: 100%;
+    height: 100%; */
+    /* background-color: #111; */
+    /* background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    background-color: #111;
+    background-attachment: fixed; */
+}
+
+.portfolio {
+    width: 100%;
+    height: 100%;
+    background: url('/images/dark-nature.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 @font-face {
@@ -52,13 +68,9 @@ body {
 
 .wordmain {
     color: white;
-    /* font-family: 'rsubold', sans-serif; */
     font-family: 'Fira Mono', monospace;
     font-size: 80px;
-    /* -webkit-text-stroke: 2px black; */
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
     margin: 0;
     letter-spacing: -7px;
 }
@@ -145,14 +157,8 @@ body {
     }
 }
 
-.imgEducation {
-    /* width: 230px;
-    height: 230px; */
-    /* border: 2px solid #fff; */
-    /* -moz-box-shadow: 0px 6px 5px #ccc;
-    -webkit-box-shadow: 0px 6px 5px #ccc;
-    box-shadow: 0px 6px 5px #ccc;
-    -moz-border-radius: 230px;
-    -webkit-border-radius: 230px;
-    border-radius: 230px; */
-}
+.imgEducation{
+    width: 250px;
+    height: 300px;
+    margin: auto;
+  }
