--- a/views/education.ejs
+++ b/views/education.ejs
@@ -60,11 +60,17 @@
       transform: translate(1px, -2px) rotate(-1deg);
     }
   }
+
+  .imgEducation{
+    width: 240px;
+    height: 300px;
+    margin: auto;
+  }
 </style>
 
-<body>
+<body style="background-color: #111;">
   <%- include navbar %>
-    <div class="education">
+    <!-- <div class="education"> -->
       <div class="col-md-12" style="padding-top:90px;">
         <div class="contenttime">
           <div class="timeline">
@@ -73,7 +79,9 @@
                 <div class="timeline-content">
                   <h3 class="date">2012 - 2015</h3>
                   <h1>Ratwinit Bangkaeo School</h1>
-                  <img src="/images/RWB_Logo.jpg" class="imgEducation mx-auto d-block" width="60%" height="50%">
+                  <div class="text-center">
+                    <img src="/images/RWB_Logo.jpg" class="mx-auto imgEducation d-block">
+                  </div>
                   <p>Science - Mathematics (GPA 3.12)</p>
                 </div>
               </li>
@@ -81,7 +89,9 @@
                 <div class="timeline-content">
                   <h3 class="date">2015 - 2019</h3>
                   <h1>Thai-Nichi Institute of Technology</h1>
-                  <img src="/images/TNI_Logo.jpg" class="imgEducation mx-auto d-block" width="50%" height="50%">
+                  <div class="text-center">
+                    <img src="/images/TNI_Logo.jpg" class="mx-auto imgEducation d-block">
+                  </div>
                   <p>Information Technology (GPA 3.17)</p>
                 </div>
               </li>
@@ -89,8 +99,7 @@
           </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
 </body>
-<%- //include loading %>
 
 </html>
